# lehrki

./: .env.example  .gitignore  .replit  README.md  ai_services.py  api_routes.py  app.py  models.py  package-lock.json  package.json  pyproject.toml  replit.md  routes.py  stripe_service.py
attached_assets/: Pasted-You-are-a-senior-full-stack-team-architect-frontend-backend-DevOps-QA-UX-Deliver-a-productio-1756520248084_1756520248085.txt
backend/: .env.example  create_admin.py  create_demo_users.py  fix_roles.py  init_demo.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  test_imports.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  auth.py  config.py  database.py  database_init.py
backend/app/models/: models.py  schemas.py
backend/app/services/: __init__.py  advanced_ai.py  ai_services.py  enterprise.py  ml_analytics.py  websocket_manager.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatBot.jsx  CreatePostModal.jsx  FeedbackModal.jsx  Footer.jsx  LanguageSelector.jsx  LiveChat.jsx  LiveChatWidget.jsx  MembershipModal.jsx  Navbar.jsx  PerformanceChart.jsx  PostDetailModal.jsx  ProtectedRoute.jsx  QuizTaker.jsx  RealTimeStatus.jsx  (+4 more)
static/css/: style.css
static/js/: app.js  chatbot.js
templates/: 403.html  404.html  500.html  admin_dashboard.html  base.html  dashboard.html  index.html  parent_letter.html  quiz.html  student_dashboard.html  subscription.html  teacher_dashboard.html
(+46 files in other folders)
